--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "i": "^0.3.6",
     "npm": "^6.9.0",
     "react": "^16.8.6",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
