--- a/package.json
+++ b/package.json
@@ -1,48 +1,30 @@
 {
-  "name": "portfolio",
+  "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://msanvarov.github.io/personal-portfolio",
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.1.1",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "axios": "0.27.2",
-    "formik": "2.2.9",
-    "gh-pages": "4.0.0",
-    "i": "0.3.7",
-    "npm": "8.13.2",
-    "react": "18.2.0",
-    "react-animate-on-scroll": "2.1.5",
-    "react-bootstrap": "2.4.0",
-    "react-circular-progressbar": "2.1.0",
-    "react-dom": "18.2.0",
-    "react-particles-js": "3.6.0",
-    "react-scripts": "5.0.1",
-    "yup": "0.32.11"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "dependencies": {
+    "@types/node": "20.3.3",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.0",
+    "classnames": "^2.3.2",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.8",
+    "next": "13.4.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-type-animation": "^3.1.0",
+    "reactstrap": "^9.2.0",
+    "typescript": "5.1.6"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/aos": "^3.0.4"
   }
 }
