:recycle: vercel analytics

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
