--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@hotjar/browser": "^1.0.9",
     "@nx/next": "16.7.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
