:truck: :globe_with_meridians: :bento: moving content to i18n lib and fixing assets

--- a/nx.json
+++ b/nx.json
@@ -46,7 +46,9 @@
       "application": {
         "babel": true
       },
-      "library": {}
+      "library": {
+        "unitTestRunner": "none"
+      }
     },
     "@nx/next": {
       "application": {
