--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nx/next": "16.7.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@swc/helpers": "~0.5.0",
+    "@vercel/analytics": "^1.0.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
