--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "nx": "16.7.4",
-    "nx-cloud": "latest",
+    "nx-cloud": "16.3.0",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
@@ -77,3 +77,4 @@
     "typescript": "~5.1.3"
   }
 }
+
