--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@formspree/react": "^2.5.1",
     "@hotjar/browser": "^1.0.9",
-    "@nx/next": "16.7.4",
+    "@nx/next": "17.1.3",
     "@reduxjs/toolkit": "^1.9.5",
-    "@swc/helpers": "~0.5.0",
+    "@swc/helpers": "0.5.3",
     "@vercel/analytics": "^1.0.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.1",
@@ -23,7 +23,7 @@
     "framer-motion": "^10.16.1",
     "gray-matter": "^4.0.3",
     "moment": "^2.29.4",
-    "next": "13.4.1",
+    "next": "^13.5.6",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -37,28 +37,28 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@nx/cypress": "16.7.4",
-    "@nx/eslint-plugin": "16.7.4",
-    "@nx/jest": "16.7.4",
-    "@nx/js": "16.7.4",
-    "@nx/linter": "16.7.4",
-    "@nx/react": "16.7.4",
-    "@nx/workspace": "16.7.4",
+    "@nx/cypress": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/js": "17.1.3",
+    "@nx/react": "17.1.3",
+    "@nx/workspace": "17.1.3",
     "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
+    "@swc/core": "1.3.100",
     "@testing-library/react": "14.0.0",
     "@types/aos": "^3.0.4",
     "@types/jest": "^29.4.0",
     "@types/node": "18.14.2",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@types/react": "18.2.24",
+    "@types/react-dom": "18.2.9",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "babel-jest": "^29.4.1",
-    "cypress": "^12.16.0",
+    "cypress": "^13.0.0",
     "eslint": "~8.46.0",
     "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
@@ -66,12 +66,11 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.7.4",
-    "nx-cloud": "16.3.0",
+    "nx": "17.1.3",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "5.2.2"
   }
 }
